# tigre

./: .gitignore  CITATION.cff  PROCESSING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  tag-release.yml
examples/: README.md
examples/advanced_usage/: plants_mit.gdict
examples/advanced_usage/NC_065239.1/: NC_065239.1.fasta
examples/clean/multiple/: example_dataset.tsv
examples/clean/multiple/NC_045135.1/: NC_045135.1.fasta
examples/clean/multiple/NC_045136.1/: NC_045136.1.gff3
examples/clean/multiple/NC_068105.1/: NC_068105.1.fasta
examples/clean/single/: NC_007982.1.gff3
examples/extract/multiple/: example_dataset.tsv
examples/extract/multiple/NC_035963.1/: NC_035963.1.fasta  NC_035963.1_clean.gff3
examples/extract/multiple/NC_045135.1/: NC_045135.1_clean.gff3
examples/extract/multiple/NC_045136.1/: NC_045136.1.fasta  NC_045136.1_clean.gff3
examples/extract/multiple/NC_065239.1/: NC_065239.1_clean.gff3
examples/extract/multiple/NC_068105.1/: NC_068105.1.gff3  NC_068105.1_clean.gff3
examples/extract/single/: NC_007982.1_clean.gff3
examples/getfasta/multiple/NC_035963.1/: NC_035963.1.gff3  NC_035963.1_intergenic.gff3
examples/getfasta/multiple/NC_045135.1/: NC_045135.1.gff3  NC_045135.1_intergenic.gff3
examples/getfasta/multiple/NC_045136.1/: NC_045136.1_intergenic.gff3
examples/getfasta/multiple/NC_065239.1/: NC_065239.1.gff3  NC_065239.1_intergenic.gff3
examples/getfasta/multiple/NC_068105.1/: NC_068105.1_intergenic.gff3
examples/getfasta/single/: NC_007982.1.fasta  NC_007982.1_intergenic.gff3
src/igre/: __init__.py  cli.py  gff3_utils.py  log_setup.py  solve_overlaps.py
src/tigre/: __init__.py  clean.py  clean_gdt.py  clean_gdt_server.py  cli.py  combine.py  extract.py  extraction.py  genes.py  getfasta.py  gff3_utils.py  igr.py  log_setup.py  solve_overlaps.py
src/tigre/fasta_utils/: __init__.py  bedtools_wrapper.py  biopython_wrapper.py
(+12 files in other folders)
